SUBDIRS= emulator life-support stub src

EXTRA_DIST=include admin alpha-emulator assembler c-emulator documentation g5-emulator other support translator x86_64-emulator emulator life-support stub src OG2-patches

clean-local:	clean-local-check
.PHONY:	clean-local-check
clean-local-check:
	rm -f *~ .*~
